--- a/test/timer_spec.html
+++ b/test/timer_spec.html
@@ -16,12 +16,27 @@
 
 	      function testRecordsTime()
 	      {
-						var the_timer = new Timer();
-						the_timer.start();
-						sleep(1);
-						the_timer.stop();
-						assert('Time has elapsed', the_timer.elapsed() > 0);
+					var the_timer = new Timer();
+					the_timer.start();
+					sleep(1);
+					the_timer.stop();
+					assert('Time has elapsed', the_timer.elapsed() > 0);
 	      };
+	
+				function testElapsedSeconds() {
+					var the_timer = new Timer();
+					the_timer.start();
+					sleep(1);
+					the_timer.stop();
+					debug(the_timer.elapsedSeconds());
+					assert('Time has elapsed 0 seconds', the_timer.elapsedSeconds() < 1);
+					
+					the_timer.start();
+					sleep(1700);
+					the_timer.stop();
+					assert('Time has elapsed 1 seconds', the_timer.elapsedSeconds() > 1);
+					assert('Time has elapsed 1 seconds', the_timer.elapsedSeconds() < 2);
+				};
 
 	      </script>
 
